edits for rendering

--- a/tutorials/R/AIS-data/L4-Discharge-Series/continuous-discharge-basic/continuous-discharge-intro-content.html
+++ b/tutorials/R/AIS-data/L4-Discharge-Series/continuous-discharge-basic/continuous-discharge-intro-content.html
@@ -1,8 +1,6 @@
 
 
 
-<div id="introduction-to-the-neon-continuous-discharge-data-product" class="section level1">
-<h1>Introduction to the NEON Continuous Discharge Data Product</h1>
 <div id="ds-objectives" markdown="1">
 <div id="objectives" class="section level2">
 <h2>Objectives</h2>
@@ -382,11 +380,11 @@ methods of correction can be found in the ATBD for this data product
 is to aggregate the uncorrected 1-minute
 <code>csd_continuousDischarge</code> data to a 15-minute interval. We
 will use this opportunity to conform the column headers of the
-aggregated table we create to fit those of <code>csd_15_min</code>.</p>
+aggregated table we create to fit those of <code>csd_15_min</code>, and
+to convert quality flags to either 1 (flagged) or NA.</p>
 <div id="r-7" class="section level4">
 <h4>R</h4>
-<pre class="r"><code># Use the tidyverse suite to round, group, and summarize data
-# Note: new column names match those published in &#39;csd_15_min&#39;
+<pre class="r"><code># Round, group, and summarize data, and update column names to match csd_15_min
 csd_15_min_agg &lt;- csd_r$csd_continuousDischarge%&gt;%
   mutate(endDateTime=floor_date(endDate,&quot;15 min&quot;))%&gt;%
   group_by(siteID,endDateTime)%&gt;%
@@ -408,7 +406,6 @@ csd_15_min_agg &lt;- csd_r$csd_continuousDischarge%&gt;%
                    dischargeFinalQFSciRvw=sum(dischargeFinalQFSciRvw==1,
                                               na.rm = T))
 
-# Convert quality flag fields to 1 or NA
 csd_15_min_agg$dischargeFinalQF[
   csd_15_min_agg$dischargeFinalQF&gt;0
 ] &lt;- 1
@@ -421,14 +418,11 @@ csd_15_min_agg$dischargeFinalQFSciRvw[
 </div>
 <div id="python-7" class="section level4">
 <h4>Python</h4>
-<pre class="python"><code># Use pandas to round, group, and summarize data
-# Note: new column names match those published in &#39;csd_15_min&#39;
+<pre class="python"><code># Round, group, and summarize data, and update column names to match csd_15_min
 
-# Convert endDate to datetime and round to 15 minutes
 csd_py[&#39;csd_continuousDischarge&#39;][&#39;endDate&#39;] = pd.to_datetime(csd_py[&#39;csd_continuousDischarge&#39;][&#39;endDate&#39;])
 csd_py[&#39;csd_continuousDischarge&#39;][&#39;endDateTime&#39;] = csd_py[&#39;csd_continuousDischarge&#39;][&#39;endDate&#39;].dt.round(&#39;15min&#39;)
 
-# Group by siteID and endDateTime, then calculate aggregations
 csd_15_min_agg = csd_py[&#39;csd_continuousDischarge&#39;].groupby([&#39;siteID&#39;, &#39;endDateTime&#39;]).agg({
     &#39;equivalentStage&#39;: &#39;mean&#39;,
     &#39;stageUnc&#39;: &#39;mean&#39;,
@@ -441,7 +435,6 @@ csd_15_min_agg = csd_py[&#39;csd_continuousDischarge&#39;].groupby([&#39;siteID&
     &#39;dischargeFinalQFSciRvw&#39;: lambda x: (x == 1).sum()
 }).reset_index()
 
-# Rename columns to match csd_15_min format
 csd_15_min_agg = csd_15_min_agg.rename(columns={
     &#39;equivalentStage&#39;: &#39;stageContinuous&#39;,
     &#39;stageUnc&#39;: &#39;stageTotalUncert&#39;,
@@ -452,7 +445,6 @@ csd_15_min_agg = csd_15_min_agg.rename(columns={
     &#39;withRemnUncQLower2Std&#39;: &#39;dischargeLowerRemnUncert&#39;
 })
 
-# Convert quality flag fields to 1 or NaN
 csd_15_min_agg.loc[csd_15_min_agg[&#39;dischargeFinalQF&#39;] &gt; 0, &#39;dischargeFinalQF&#39;] = 1
 csd_15_min_agg.loc[csd_15_min_agg[&#39;dischargeFinalQFSciRvw&#39;] &gt; 0, &#39;dischargeFinalQFSciRvw&#39;] = 1
 csd_15_min_agg.loc[csd_15_min_agg[&#39;dischargeFinalQFSciRvw&#39;] == 0, &#39;dischargeFinalQFSciRvw&#39;] = pd.NA</code></pre>
@@ -475,7 +467,6 @@ csd_15_min_all &lt;- merge(csd_15_min_agg,
                         csd_r$csd_15_min,
                         all = T)
 
-# Order the timeseries data by endDateTime
 csd_15_min_all &lt;- csd_15_min_all[order(csd_15_min_all$endDateTime),]</code></pre>
 </div>
 <div id="python-8" class="section level4">
@@ -488,12 +479,10 @@ csd_py[&#39;csd_15_min&#39;][&#39;endDateTime&#39;] = pd.to_datetime(
     csd_py[&#39;csd_15_min&#39;][&#39;endDateTime&#39;], utc=True
 )
 
-# Merge aggregated table created earlier with csd_15_min from the download
 csd_15_min_all = pd.merge(csd_15_min_agg,
                           csd_py[&#39;csd_15_min&#39;],
                           how=&#39;outer&#39;)
 
-# Order the timeseries data by endDateTime
 csd_15_min_all = csd_15_min_all.sort_values(by=&#39;endDateTime&#39;)</code></pre>
 </div>
 </div>
@@ -519,7 +508,6 @@ series to get a better visual of the associated uncertainty.</p>
 <h3>R</h3>
 <pre class="r"><code># Use the ggplot package in tidyverse to plot continuous stage and uncertainty
 
-# Plot 1: Entire Period of Record
 csd_15_min_all%&gt;%
   ggplot(aes(x=endDateTime))+
   geom_ribbon(aes(ymin=stageContinuous-stageTotalUncert,
@@ -550,7 +538,6 @@ csd_15_min_all%&gt;%
 <h3>Python</h3>
 <pre class="python"><code># Use matplotlib to plot continuous stage and uncertainty
 
-# Plot 1: Entire Period of Record
 fig, ax = plt.subplots(figsize=(12, 6))
 ax.fill_between(csd_15_min_all[&#39;endDateTime&#39;], 
                 csd_15_min_all[&#39;stageContinuous&#39;] - csd_15_min_all[&#39;stageTotalUncert&#39;],
@@ -613,7 +600,6 @@ time series to get a better visual of the associated uncertainties.</p>
 <h3>R</h3>
 <pre class="r"><code># Use the ggplot package in tidyverse to plot continuous discharge and uncertainty
 
-# Plot 1: Entire Period of Record
 csd_15_min_all%&gt;%
   ggplot(aes(x=endDateTime))+
   geom_ribbon(aes(ymin=dischargeLowerRemnUncert,
@@ -650,7 +636,6 @@ csd_15_min_all%&gt;%
 <h3>Python</h3>
 <pre class="python"><code># Use matplotlib to plot continuous discharge and uncertainty
 
-# Plot 1: Entire Period of Record
 fig, ax = plt.subplots(figsize=(12, 6))
 ax.fill_between(csd_15_min_all[&#39;endDateTime&#39;], 
                 csd_15_min_all[&#39;dischargeLowerRemnUncert&#39;],
@@ -696,5 +681,4 @@ plt.show()</code></pre>
 </div>
 <div id="section-11" class="section level2 unnumbered">
 <h2 class="unnumbered"></h2>
-</div>
 </div>
